--- a/EckoOfTheFox-FrontEnd/css/singleOpinion.css
+++ b/EckoOfTheFox-FrontEnd/css/singleOpinion.css
@@ -40,6 +40,7 @@
         width: 100%;
         border: 1px solid rgb(62, 62, 62);
         min-height: fit-content;
+        padding: 0.5rem;
 
 }
 
@@ -49,8 +50,10 @@
         flex-direction: column;
         height: 20px;
         width: 95%;
+        border-top: 1px solid rgb(62, 62, 62);
         border-bottom: 1px solid rgb(62, 62, 62);
         min-height: fit-content;
+        margin-bottom: 0.5rem;
 
 }
 
