--- a/EckoOfTheFox-FrontEnd/css/styleoutput.css
+++ b/EckoOfTheFox-FrontEnd/css/styleoutput.css
@@ -923,11 +923,13 @@ input {
   padding-right: 1rem;
 }
 .date-and-title {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   margin-bottom: 2px;
   div {
     margin-left: 0.5rem;
-    margin-right: auto;
+    align-self: flex-start;
     margin-bottom: 0;
     font-size: small;
     font-style: italic;
