--- a/EckoOfTheFox-FrontEnd/css/styleoutput.css
+++ b/EckoOfTheFox-FrontEnd/css/styleoutput.css
@@ -499,19 +499,9 @@
       }
     }
   }
-  .sm\:visible {
-    @media (width >= 40rem) {
-      visibility: visible;
-    }
-  }
   .sm\:block {
     @media (width >= 40rem) {
       display: block;
-    }
-  }
-  .sm\:flex {
-    @media (width >= 40rem) {
-      display: flex;
     }
   }
   .sm\:w-2\/5 {
@@ -1017,6 +1007,45 @@ footer > div {
   align-items: center;
   gap: 0;
 }
+.index-opinion {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid rgb(62, 62, 62);
+  width: 100%;
+}
+.index-opinion > a {
+  align-self: flex-start;
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+  align-items: center;
+  h3 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Mr Dafoe;
+    font-size: 1.75rem;
+    height: 4rem;
+    width: 4rem;
+    border: 1px solid rgba(62, 62, 62, 0.95);
+    border-radius: 2rem;
+  }
+  h4 {
+    text-align: left;
+    text-wrap: wrap;
+    font-size: 1.25 rem;
+  }
+}
+.index-opinion > p {
+  font-size: 0.875rem;
+  line-height: calc(1.4286);
+}
+.index-opinion:hover {
+  border: 2px solid rgb(62, 62, 62);
+  h3 {
+    background-color: rgba(255, 104, 0, 0.75);
+  }
+}
 @media only screen and (max-width: 640px) {
   footer ul {
     display: none;
@@ -1036,9 +1065,19 @@ footer > div {
     }
   }
 }
+@media only screen and (min-width: 1024) {
+  .index-opinion {
+    width: 40%;
+  }
+}
 @media only screen and (max-width: 1024px) {
   .sidebar {
     display: none;
+  }
+}
+@media only screen and (min-width: 1080px) {
+  .index-opinion {
+    width: 22%;
   }
 }
 @media only screen and (max-width: 1291px) {
