added placeholder opinions and implemented a system that shows opinions on index.html. Fixed missing tech.html and repaired side following implementation of side bar toggle at lower screen resolution

--- a/EckoOfTheFox-FrontEnd/css/non-index-style.css
+++ b/EckoOfTheFox-FrontEnd/css/non-index-style.css
@@ -52,7 +52,8 @@
 }
 
 @media only screen and (min-width: 1024px) {
-    .normal-sidebar {
+
+    #sidebar {
         max-width: 25%;
         height: auto;
         position: static;
@@ -69,7 +70,7 @@
         }
     }
 
-    .normal-sidebar:hover {
+    #sidebar:hover {
         max-width: 25%;
         display: inline;
         flex-direction: initial;
