--- a/EckoOfTheFox-FrontEnd/css/style.css
+++ b/EckoOfTheFox-FrontEnd/css/style.css
@@ -320,9 +320,37 @@ footer > div {
     }
 }
 
+.index-opinion h3 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Mr Dafoe;
+    font-size: 1.75rem;
+    height: 4rem;
+    width: 4rem;
+    border: 1px solid rgba(62, 62, 62, 0.95);
+    border-radius: 2rem;
+}
+.index-opinion h4 {
+    font-weight: bold;
+    text-align: left;
+    text-wrap: wrap;
+    font-size: 1.25 rem;
+}
+
 .index-opinion > p {
-    font-size: 0.875rem;
-    line-height: calc(1.4286);
+    font-size: 1rem;
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
+    width: 100%;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 1.25rem;
+    max-height:  2.5rem;
+
 }
 
 .index-opinion:hover {
