--- a/EckoOfTheFox-FrontEnd/css/styleoutput.css
+++ b/EckoOfTheFox-FrontEnd/css/styleoutput.css
@@ -17,6 +17,7 @@
     --text-sm--line-height: calc(1.25 / 0.875);
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
+    --font-weight-bold: 700;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
@@ -208,6 +209,9 @@
   .-mt-0\.5 {
     margin-top: calc(var(--spacing) * -0.5);
   }
+  .mt-4 {
+    margin-top: calc(var(--spacing) * 4);
+  }
   .mt-8 {
     margin-top: calc(var(--spacing) * 8);
   }
@@ -217,14 +221,23 @@
   .mt-auto {
     margin-top: auto;
   }
+  .mr-auto {
+    margin-right: auto;
+  }
   .mb-0 {
     margin-bottom: calc(var(--spacing) * 0);
   }
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
   }
+  .mb-4 {
+    margin-bottom: calc(var(--spacing) * 4);
+  }
   .mb-8 {
     margin-bottom: calc(var(--spacing) * 8);
+  }
+  .ml-auto {
+    margin-left: auto;
   }
   .flex {
     display: flex;
@@ -443,10 +456,6 @@
     font-size: var(--text-xs);
     line-height: calc(var(--spacing) * 5);
   }
-  .font-\[1\.25rem\] {
-    --tw-font-weight: 1.25rem;
-    font-weight: 1.25rem;
-  }
   .text-wrap {
     text-wrap: wrap;
   }
@@ -475,18 +484,18 @@
       }
     }
   }
-  .group-hover\:bg-\[rgba\(62\,62\,62\,0\.5\)\] {
-    &:is(:where(.group):hover *) {
+  .hover\:font-bold {
+    &:hover {
       @media (hover: hover) {
-        background-color: rgba(62,62,62,0.5);
+        --tw-font-weight: var(--font-weight-bold);
+        font-weight: var(--font-weight-bold);
       }
     }
   }
-  .hover\:border-2 {
+  .hover\:underline {
     &:hover {
       @media (hover: hover) {
-        border-style: var(--tw-border-style);
-        border-width: 2px;
+        text-decoration-line: underline;
       }
     }
   }
@@ -502,11 +511,6 @@
   .sm\:block {
     @media (width >= 40rem) {
       display: block;
-    }
-  }
-  .sm\:w-2\/5 {
-    @media (width >= 40rem) {
-      width: calc(2/5 * 100%);
     }
   }
   .sm\:gap-2 {
@@ -645,6 +649,11 @@
       justify-content: space-around;
     }
   }
+  .lg\:gap-0\.5 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 0.5);
+    }
+  }
   .lg\:gap-0\.25 {
     @media (width >= 64rem) {
       gap: calc(var(--spacing) * 0.25);
@@ -702,11 +711,6 @@
   .xl\:w-1\/4 {
     @media (width >= 80rem) {
       width: calc(1/4 * 100%);
-    }
-  }
-  .xl\:w-2\/9 {
-    @media (width >= 80rem) {
-      width: calc(2/9 * 100%);
     }
   }
   .xl\:w-2\/11 {
@@ -1036,9 +1040,35 @@ footer > div {
     font-size: 1.25 rem;
   }
 }
+.index-opinion h3 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Mr Dafoe;
+  font-size: 1.75rem;
+  height: 4rem;
+  width: 4rem;
+  border: 1px solid rgba(62, 62, 62, 0.95);
+  border-radius: 2rem;
+}
+.index-opinion h4 {
+  font-weight: bold;
+  text-align: left;
+  text-wrap: wrap;
+  font-size: 1.25 rem;
+}
 .index-opinion > p {
-  font-size: 0.875rem;
-  line-height: calc(1.4286);
+  font-size: 1rem;
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+  width: 100%;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 1.25rem;
+  max-height: 2.5rem;
 }
 .index-opinion:hover {
   border: 2px solid rgb(62, 62, 62);
@@ -1170,14 +1200,14 @@ footer > div {
   inherits: false;
   initial-value: solid;
 }
-@property --tw-font-weight {
-  syntax: "*";
-  inherits: false;
-}
 @property --tw-outline-style {
   syntax: "*";
   inherits: false;
   initial-value: solid;
+}
+@property --tw-font-weight {
+  syntax: "*";
+  inherits: false;
 }
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
@@ -1188,8 +1218,8 @@ footer > div {
       --tw-skew-x: initial;
       --tw-skew-y: initial;
       --tw-border-style: solid;
-      --tw-font-weight: initial;
       --tw-outline-style: solid;
+      --tw-font-weight: initial;
     }
   }
 }
