when removing an opinion the comments associated with it are also deleted

--- a/EckoOfTheFox-FrontEnd/css/style.css
+++ b/EckoOfTheFox-FrontEnd/css/style.css
@@ -409,8 +409,6 @@ footer > div {
     visibility: hidden;
     min-width: 20rem; 
     max-width: fit-content;
-    margin-left: 30%;
-    margin-right: 30%;
     background-color: rgb(255, 104, 0); 
     color: white;
     text-align: center;
@@ -419,6 +417,8 @@ footer > div {
     position: fixed;
     z-index: 100;
     top: 10%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 #toast.show {
