--- a/EckoOfTheFox-FrontEnd/css/styleoutput.css
+++ b/EckoOfTheFox-FrontEnd/css/styleoutput.css
@@ -1119,8 +1119,6 @@ footer > div {
   visibility: hidden;
   min-width: 20rem;
   max-width: fit-content;
-  margin-left: 30%;
-  margin-right: 30%;
   background-color: rgb(255, 104, 0);
   color: white;
   text-align: center;
@@ -1129,6 +1127,8 @@ footer > div {
   position: fixed;
   z-index: 100;
   top: 10%;
+  left: 50%;
+  transform: translateX(-50%);
 }
 #toast.show {
   visibility: visible;
