--- a/EckoOfTheFox-FrontEnd/css/singleOpinion.css
+++ b/EckoOfTheFox-FrontEnd/css/singleOpinion.css
@@ -36,7 +36,7 @@
         /* TODO */
         display: flex;
         flex-direction: column;
-        height: 20px;
+        height: fit-content;
         width: 100%;
         border: 1px solid rgb(62, 62, 62);
         min-height: fit-content;
@@ -48,13 +48,17 @@
         /* TODO */
         display: flex;
         flex-direction: column;
-        height: 20px;
+        align-items: center;
         width: 95%;
         border-top: 1px solid rgb(62, 62, 62);
         border-bottom: 1px solid rgb(62, 62, 62);
         min-height: fit-content;
         margin-bottom: 0.5rem;
 
+}
+
+.comment-container > div {
+        align-self: flex-end;
 }
 
 .date {
